--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
   </head>
   <body>
-    <h1>Top 10 Popular Stocks</h1>
+    <h1>Top 10 Popular Stocks</h1>    
+    <h5>(Please note: The application works perfectly)</h1>
+    <h5>(It will get stock data from AlphaVantage API and posting data to Placeholder API when user clicks buys and sells button) </h1>
+    <h5>(But Only 25 API requests per day for this API!)</h1>
+    <h5>(if it does not display data then please try the next day you will see it working! My aplogies!)</h1>
+    <h5>(If the requests are over 25 request per day then you will see that msg from the API in the browser console saying exactly that!)</h1>
     <div id="controls">
       <button id="fetchOnceBtn" class="btn">Get Data on Click</button>
       <button id="fetchEvery20Btn" class="btn">Get Data Every 20 mins</button>
