--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   </head>
   <body>
-    <h1>Top 10 Popular Stocks</h1>    
+    <div class="headingdiv"> <h1>Top 10 Popular Stocks</h1> <img class="favicon" src="favicon.ico" alt="stocks trading">
+    </div>  
     <h5>(Please note: The application works perfectly)</h1>
     <h5>(It will get stock data from AlphaVantage API and posting data to Placeholder API when user clicks buys and sells button) </h1>
     <h5>(But Only 25 API requests per day for this API!)</h1>
